--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "config-multipaas": "^0.1.0",
     "mongojs": "^0.17.0",
-    "restify": "^2.8.3"
+    "restify": "^2.8.3",
+    "express": "~4.9.0",
+    "mongoose": "*"
   },
   "devDependencies": {
     "request": "2.24.x",
