--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "config-multipaas": "^0.1.0",
     "mongojs": "^0.17.0",
     "restify": "^2.8.3",
+    "body-parser": "~1.8.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "ejs": "~0.8.5",
     "express": "~4.9.0",
+    "morgan": "~1.3.0",
     "mongoose": "*"
   },
   "devDependencies": {
